# tcap_alb_logs_ingestion

./: .gitignore  README.md  pyproject.toml
tcap_alb_logs_ingestion/: alb_parser.py  db_ops.py  main.py  test_log_parser  utils.py
tcap_alb_logs_ingestion/resources/: dev.properties  satish.properties
